2014-08-19  Magnus Granberg  <zorry@gentoo.org>

        TEXTREL in libjavascriptcoregtk-1.0.so.0.11.0 on x86 (or i586)
        https://bugs.webkit.org/show_bug.cgi?id=70610

        Reviewed by Darin Adler.

        Add PLT if we're building with PIC.

        * wtf/InlineASM.h:

2015-04-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix the build with newer GLib.

        * wtf/gobject/GMutexLocker.h: Move to the WTF namespace.

2014-10-23  Alberto Garcia  <berto@igalia.com>

        [GTK] Fix build on Hurd
        https://bugs.webkit.org/show_bug.cgi?id=138003

        Reviewed by Carlos Garcia Campos.

        * wtf/InlineASM.h:
        * wtf/Platform.h:

2014-08-25  Tomas Popela  <tpopela@redhat.com>

        Add support for little-endian PowerPC64
        https://bugs.webkit.org/show_bug.cgi?id=135647

        Reviewed by Oliver Hunt.

        * wtf/Platform.h:
        * wtf/dtoa/utils.h:

2014-02-05  Zan Dobersek  <zdobersek@igalia.com>

        Remove the WTF_COMPILER_SUPPORTS_CXX_GENERALIZED_INITIALIZERS macro
        https://bugs.webkit.org/show_bug.cgi?id=128267

        Reviewed by Andreas Kling.

        Remove the WTF_COMPILER_SUPPORTS_CXX_GENERALIZED_INITIALIZERS macro that was manually defined for compilers
        that support the C++11 initializer lists. The feature is well supported in Clang, MSVC and also GCC. It
        was actually already used unguarded in HashSet.

        * wtf/Compiler.h:
        * wtf/HashMap.h:
        (WTF::HashMap::HashMap):
        * wtf/Vector.h:
        (WTF::Vector::Vector):

2014-05-25  Milan Crha  <mcrha@redhat.com>

        [Stable] [GTK] GdiObject.h missing in WebKitGTK 2.4.1 tarball
        https://bugs.webkit.org/show_bug.cgi?id=132814

        Reviewed by Carlos Garcia Campos.

        Add missing files to fix the mingw32 build.

        * GNUmakefile.list.am:

2014-04-19  Filip Pizlo  <fpizlo@apple.com>

        Make it easier to check if an integer sum would overflow