@@ -1,3 +1,15 @@
+2015-01-20  YunQiang Su  <wzssyqa@gmail.com>
+
+        Fix failed to build for Linux/MIPS64EL
+        https://bugs.webkit.org/show_bug.cgi?id=124370
+
+        Reviewed by Darin Adler.
+
+        Add MIPS64EL support.
+
+        * wtf/Platform.h:
+        * wtf/dtoa/utils.h:
+
 2014-08-19  Magnus Granberg  <zorry@gentoo.org>
 
         TEXTREL in libjavascriptcoregtk-1.0.so.0.11.0 on x86 (or i586)
